# pokerbot

./: README.md
backend/: .gitignore  Cargo.toml  robot_player.py
backend/src/: main.rs
frontend/: package-lock.json
frontend/src/: App.svelte  app.css
frontend/src/lib/: Card.svelte  types.ts
