[package]
name = "poker_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
tower-http = { version = "0.5.1", features = ["cors"] }
once_cell = "1.19.0"
